# nao6-hristudio-integration

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml
scripts/: init_robot.py  init_robot.sh
src/nao_launch/: CMakeLists.txt  README.md  package.xml
src/nao_launch/launch/: nao6_hristudio.launch.py  nao6_hristudio_enhanced.launch.py  nao6_production.launch.py
src/nao_launch/scripts/: nao_control.py  start_nao6_hristudio.sh
src/naoqi_bridge_msgs/.github/workflows/: ros2.yml
src/naoqi_libqi/: CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md
src/naoqi_libqi/.github/workflows/: iron_jammy.yml  ros2.yml
src/naoqi_libqi/ka/: testutils.hpp
src/naoqi_libqi/ka/uri/: uri_fwd.hpp
src/naoqi_libqi/qi/: application.hpp  strand.hpp
src/naoqi_libqi/qi/detail/: executioncontext.hpp  future.hxx  future_fwd.hpp  futurebarrier.hpp  trackable.hxx
src/naoqi_libqi/qi/messaging/detail/: autoservice.hxx
src/naoqi_libqi/qi/type/: proxyproperty.hpp  proxysignal.hpp
src/naoqi_libqi/qi/type/detail/: anyfunctionfactory.hxx  bindtype.hxx  functionsignature.hxx  genericobject.hpp  object.hxx  objecttypebuilder.hxx  signal.hxx  typedispatcher.hxx
src/naoqi_libqi/src/: application.cpp  eventloop.cpp  log.cpp  periodictask.cpp  tailfileloghandler.cpp
src/naoqi_libqi/src/messaging/: boundobject.cpp  message.cpp  objectregistrar.cpp  remoteobject.cpp  servicedirectory.cpp  servicedirectoryclient.cpp  session.cpp  sessionservice.cpp  transportserverasio_p.cpp
src/naoqi_libqi/src/messaging/sock/: connectedstate.hpp  disconnectingstate.hpp  networkasio.hpp  resolve.hpp  socketwithcontext.hpp  traits.hpp
src/naoqi_libqi/src/type/: anyreference.cpp  dynamicobject.cpp
src/naoqi_libqi/tests/: CMakeLists.txt
src/naoqi_libqi/tests/ka/: CMakeLists.txt  test_functional.cpp  test_functor.cpp  test_opt.cpp  test_uri_parsing.cpp
src/naoqi_libqi/tests/messaging/: test_call.cpp  test_event_connect.cpp  test_event_remote_connect.cpp  test_gateway.cpp  test_proxy.cpp  test_sd.cpp  test_send_object.cpp  test_send_object_identification.cpp  test_service.cpp  test_session.cpp  test_session_harder.cpp  test_signature.cpp  test_transportsocketcache.cpp
src/naoqi_libqi/tests/messaging/passobject-fromclient/: adder.cpp
src/naoqi_libqi/tests/messaging/passobject-fromservice/: adder.cpp
src/naoqi_libqi/tests/messaging/task-service/: test_task.cpp
src/naoqi_libqi/tests/qi/: test_bind.cpp  test_future.cpp  test_strand.cpp  test_trackable.cpp
src/naoqi_libqi/tests/type/: test_event.cpp  test_object.cpp  test_signal.cpp
src/naoqi_libqicore/: CHANGELOG.rst  README.md
src/naoqi_libqicore/.github/workflows/: iron_jammy.yml  ros2.yml
